--- a/config/config.json
+++ b/config/config.json
@@ -15,14 +15,40 @@
             "id": "lab2",
             "name": "Lab 2 - Netmiko Connection",
             "file": "Jobs/Lab-2-Netmiko-Connection.py",
-            "description": "Connects to two routers and runs show ip interface brief and show ip route commands",
+            "description": "Connects to devices from CSV and runs selected show commands",
             "inputs": [
                 {"name": "username", "label": "Device username", "arg": "--username", "type": "text"},
                 {"name": "password", "label": "Device password", "arg": "--password", "type": "text"},
-                {"name": "csv_path", "label": "Device CSV path", "arg": "--csv-path", "type": "text", "default": "data/lab2.csv"},
+                {"name": "csv_path", "label": "Device CSV path", "arg": "--csv-path", "type": "text", "default": "data/lab2-devices.csv"},
+                {"name": "commands_json", "label": "Commands JSON path", "arg": "--commands-json", "type": "text", "default": "data/show-commands.json"},
                 {"name": "show_interface_brief", "label": "Run 'show ip interface brief'", "arg": "--show-interface-brief", "type": "bool", "default": true},
                 {"name": "show_route", "label": "Run 'show ip route'", "arg": "--show-route", "type": "bool", "default": true},
-                {"name": "show_version", "label": "Run 'show version'", "arg": "--show-version", "type": "bool", "default": true}
+                {"name": "show_version", "label": "Run 'show version'", "arg": "--show-version", "type": "bool", "default": true},
+                {"name": "show_eigrp_interfaces", "label": "Run 'show ip eigrp interfaces'", "arg": "--show-eigrp-interfaces", "type": "bool", "default": true},
+                {"name": "show_eigrp_neighbors", "label": "Run 'show ip eigrp neighbors'", "arg": "--show-eigrp-neighbors", "type": "bool", "default": true},
+                {"name": "show_eigrp_topology", "label": "Run 'show ip eigrp topology'", "arg": "--show-eigrp-topology", "type": "bool", "default": true}
+            ]
+        },
+        {
+            "id": "lab3",
+            "name": "Lab 3 - Basic Netmiko Config Changes",
+            "file": "Jobs/Lab-3-Basic-Netmiko-Config-Changes.py",
+            "description": "Pushes EIGRP config to two routers (inline for R51, file for R52)",
+            "inputs": [
+                {"name": "username", "label": "Device username", "arg": "--username", "type": "text"},
+                {"name": "password", "label": "Device password", "arg": "--password", "type": "text"},
+                {"name": "devices_csv", "label": "Devices CSV path", "arg": "--devices-csv", "type": "text", "default": "data/lab3-devices.csv"},
+                {"name": "commands_json", "label": "Commands JSON path", "arg": "--commands-json", "type": "text", "default": "data/show-commands.json"},
+                {"name": "lab3_config_json", "label": "Lab3 config JSON", "arg": "--lab3-config-json", "type": "text", "default": "data/lab3-config.json"},
+                {"name": "r52_config", "label": "R52 config file path", "arg": "--r52-config", "type": "text", "default": "data/lab3-r52_eigrp.cfg"},
+                {"name": "push_config", "label": "Push config to devices", "arg": "--push-config", "type": "bool", "default": true},
+                {"name": "push_config_targets", "label": "Config targets", "arg": "--push-config-targets", "type": "multiselect_devices", "csv_input": "devices_csv", "default": ["all"]},
+                {"name": "show_interface_brief", "label": "Run 'show ip interface brief'", "arg": "--show-interface-brief", "type": "bool", "default": true},
+                {"name": "show_route", "label": "Run 'show ip route'", "arg": "--show-route", "type": "bool", "default": true},
+                {"name": "show_version", "label": "Run 'show version'", "arg": "--show-version", "type": "bool", "default": true},
+                {"name": "show_eigrp_interfaces", "label": "Run 'show ip eigrp interfaces'", "arg": "--show-eigrp-interfaces", "type": "bool", "default": true},
+                {"name": "show_eigrp_neighbors", "label": "Run 'show ip eigrp neighbors'", "arg": "--show-eigrp-neighbors", "type": "bool", "default": true},
+                {"name": "show_eigrp_topology", "label": "Run 'show ip eigrp topology'", "arg": "--show-eigrp-topology", "type": "bool", "default": true}
             ]
         }
     ]
